--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             // --- ESSENTIALS (High Priority) ---
             { name: "FreeBitco.in", url: "https://freebitco.in/?r=17006348", cat: "essentials", desc: "Oldest faucet. Hourly BTC + Interest." },
             { name: "Cointiply", url: "https://cointiply.com/r/mOnqp", cat: "essentials", desc: "Best offerwall & hourly roll." },
-            { name: "Binance", url: "https://accounts.binance.com/en/register?ref=TAWUFT3R", cat: "essentials", desc: "Top exchange. Check Launchpad." },
+            { name: "Binance", url: "https://accounts.binance.com/register?ref=49685937", cat: "essentials", desc: "Top exchange. Check Launchpad." },
             { name: "FaucetPay", url: "https://faucetpay.io/?r=95880", cat: "essentials", desc: "Micro-wallet for instant payouts." },
             { name: "CoinPayU", url: "https://www.coinpayu.com/?r=dashboard", cat: "essentials", desc: "View ads for Satoshis." },
             { name: "MEXC", url: "https://www.mexc.com/auth/signup?inviteCode=2pLgC", cat: "essentials", desc: "Low cap gems exchange." },
